Revision history for Perl extension Test::MockObject.

{{$NEXT}}

1.20150527 2015-05-27 08:33:52-07:00 America/Los_Angeles
    - improved dependencies (build/run/requires), (Olivier Mengué, GH PR #10)
    - improved runtime loading (Olivier Mengué, GH PR #11)

1.20150521 2015-05-21 09:09:19-07:00 America/Los_Angeles
    - updated CGI dependency
    - improved README for GitHub (Rob Van Dam, GH PR #9)

1.20140408 2014-04-07 17:38:44-07:00 America/Los_Angeles
    - enabled Travis CI (no user-visible changes)
    - improved fields-based object support (Olivier Mengué, Maxime Soulé)

1.20140328 2014-03-28 16:17:59-07:00 America/Los_Angeles
    - support added for fields-based objects (Gavin Mogan, RT #84535)

1.20120301 2012-03-01 13:17:20 America/Los_Angeles
    - updated dependencies to latest versions of UNIVERSAL::isa and UNIVERSAL::can

1.20110612 2011-06-11 23:53:50 America/Los_Angeles
    - removed Module::Build detritus
    - improved Test::Warn testing dependency
    - Added -debug flag to load UNIVERSAL::isa and UNIVERSAL::can on demand,
      rather than in all situations.

1.20110606
    Sun Jun 04 2011
    - converted to Dist::Zilla
    - posted to GitHub

1.09
    Tue May 27 06:11:24 UTC 2008
    - removed a buggy workaround for C<no warnings 'redefine';>, now that 5.6.2
      is the baseline

1.08
    Fri Jun 29 01:36:24 UTC 2007 (chromatic)
    - removed noisy diag() calls from successful tests (RT #19444, Adam Kennedy)
    - removed some magic from the @ISA assignment to work with 5.9.5 (Andreas Koenig)

1.07
    Thu Oct  5 05:46:04 UTC 2006 (chromatic)
    - clarified class mocking documentation (reported by Praveen Ray)

    - T::MO::E should die when called with an unhandleable method (Paul the
      Nomad)

    Sat Sep 30 04:18:23 UTC 2006 (chromatic)
    - fixed incorrect version request for Scalar::Util (alexchorny, RT #21773)

    Sat Sep  9 21:19:35 UTC 2006 (chromatic)
    - fixed a logging documentation error (Nicholas Clark)