@@ -1,61 +1,0 @@
-=pod
-
-=encoding utf8
-
-=head1 NAME
-
-Test::MockObject - Perl extension for emulating troublesome interfaces
-
-=head1 SYNOPSIS
-
-  use Test::MockObject;
-  my $mock = Test::MockObject->new();
-  $mock->set_true( 'somemethod' );
-  ok( $mock->somemethod() );
- 
-  $mock->set_true( 'veritas')
-       ->set_false( 'ficta' )
-       ->set_series( 'amicae', 'Sunny', 'Kylie', 'Bella' );
-
-=head1 DESCRIPTION
-
-It's a simple program that doesn't use any other modules, and those are easy to
-test.  More often, testing a program completely means faking up input to
-another module, trying to coax the right output from something you're not
-supposed to be testing anyway.
- 
-Testing is a lot easier when you can control the entire environment.  With
-Test::MockObject, you can get a lot closer.
- 
-Test::MockObject allows you to create objects that conform to particular
-interfaces with very little code.  You don't have to reimplement the behavior,
-just the input and the output.
-
-=head1 DOCUMENTATION
-
-The full documentation for this module can be found at 
-L<CPAN Search|http://search.cpan.org/dist/Test-MockObject>, 
-L<MetaCPAN|http://www.metacpan.org/module/Test::MockObject>, 
-or by running C<perldoc Test::MockObject> at the commandline.
-
-=head1 AUTHOR
-
-chromatic, E<lt>chromatic at wgz dot orgE<gt>
-
-=head1 SEE ALSO
-
-L<perl>, L<Test::Tutorial>, L<Test::More>,
-L<http:E<sol>E<sol>www.perl.comE<sol>pubE<sol>aE<sol>2001E<sol>12E<sol>04E<sol>testing.html>,
-and
-L<http:E<sol>E<sol>www.perl.comE<sol>pubE<sol>aE<sol>2002E<sol>07E<sol>10E<sol>tmo.html>.
-
-=head1 COPYRIGHT
-
-Copyright (c) 2002 - 2015 by chromatic E<lt>chromatic at wgz dot orgE<gt>.
-
-This program is free software; you can use, modify, and redistribute it under
-the same terms as Perl 5.10.x itself.
-
-See http://www.perl.com/perl/misc/Artistic.html
-
-=cut
