@@ -2,7 +2,7 @@ name             = Test-MockObject
 author           = chromatic
 license          = Perl_5
 copyright_holder = chromatic@wgz.org
-copyright_year   = 2015
+copyright_year   = 2016
 
 [MetaResources]
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Test-MockObject
